# Project_2

./: PKG-INFO  Project2Updated.ipynb  README.md  SOURCES.txt  initial_dev.py  project2package-0.1.0-py3-none-any.whl  pyproject.toml  top_level.txt  updated_asif.py
Package_Lima/: pyproject.toml
UpdatedCodesFinal/: Project2_1.py
env/: pyvenv.cfg
packaging/: README.md  pyproject.toml
packaging/env/: pyvenv.cfg
packaging/src/Project_2_smiqbal.egg-info/: PKG-INFO  SOURCES.txt
