[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project2package"
version = "0.1.0"
description = "A sample Python project"
authors = [
    { name = "asif", email = "smiqbal@syr.edu" }
]
maintainers = [
    { name = "asif", email = "smiqbal@syr.edu" }
]
license = { text = 'MIT' }
readme = "README.md"
# homepage = "https://smiqbal012/Project_2"
# repository = "https://github.com/smiqbal012/Project_2"
# documentation = "https://project2package.readthedocs.io/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
keywords = ["sample", "example"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

