[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MonteCarlo_aklimakhanam"
version = "0.0.1"
authors = [
  { name="aklima", email="aklima@example.com" },
]
description = "Package for Project 2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smiqbal012/Project_2"


