[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "my_package"
version = "0.1.0"
description = "My description here."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
author = "Your Name"
author_email = "youremail@example.com"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[options]
python_requires = ">=3.10"
install_requires = [
  "numpy"
]

[options.packages.find]
where = "src"

